@@ -34,11 +34,17 @@ If ASN1_TIME_new failed, an exception is thrown with C<eval_error_id> set to the
 
 C<static method set : void ($t : long);>
 
-Calls native L<ASN1_TIME_set|https://docs.openssl.org/1.1.1/man3/ASN1_TIME_set> function given $t.
+Calls native L<ASN1_TIME_set|https://docs.openssl.org/1.1.1/man3/ASN1_TIME_set> function given the pointer value of the instance, $t.
 
 Exceptions:
 
 If ASN1_TIME_new failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
+=head2 check
+
+C<method check : int ();>
+
+Calls native L<ASN1_TIME_check|https://docs.openssl.org/1.1.1/man3/ASN1_TIME_set> function given the pointer value of the instance, and returns its return value.
 
 =head2 DESTROY
 
